Phase Two functionality working

--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
     <header class="header">
       <h1><span class="title-number">Number</span> <span class="title-guesser">Guesser</span></h1>
     </header>
-    <section class="range-container">
+    <!-- <section class="range-container">
       <input class="min-guess" type="number" name="min-number" placeholder="Minimum Number"/>
       <input class="max-guess" type="number" name="max-number" placeholder="Maximum Number"/>
       <button class="submit-range" type="button" name="button">Submit</button>
-    </section>
+    </section> -->
 
-    <input class="guess" type="number" name="guess-a-number" disabled="true" placeholder="Enter your guess"/>
+    <input class="guess" type="number" name="guess-a-number" placeholder="Enter your guess"/>
 
     <section class="guess-container">
-      <button class="submit" type="button" name="submit-guess-button" disabled="true">Guess</button>
+      <button class="submit" type="button" name="submit-guess-button">Guess</button>
       <button class="clear" type="button" name="clear-button" disabled="true">Clear</button>
     </section>
     <p class="guess-text"> Your last guess was </p>
     <p class="user-guess">#</p>
-    <p class="guess-status">Submit a number range to play</p>
+    <p class="guess-status">Guess a number between 1 &amp; 100</p>
     <button class="reset" type="button" name="reset-button" disabled="true">Reset</button>
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
